# libmozaik

./: .gitignore  LICENSE  README.md
.github/workflows/: python-app.yml  rust.yml
client/: README.md  aes.js  index.html  integration_glue.js  libmozaik.js  openfhe_pke_es6.js  openfhe_pke_es6.wasm  test.js
docs/: .gitignore  diag.uml  docs.tex
fhe/: CMakeLists.txt  client_setup.cpp  install_openfhe.sh  iot_protect.cpp  main.cpp  main_server.cpp  run_network_server.cpp  setup_client.cpp  setup_server.sh  test_binaries.py  test_deserial.cpp
fhe/SERVER/: config.py  fhe_context.py  mozaik_obelisk.py  potion.py  server.py  test_mozaik_obelisk.py  test_server.py  test_worker.py  worker.py
fhe/assets/configs/default/: biases_0_relu.txt  biases_1_relu.txt  biases_2_relu.txt  biases_3_relu.txt  biases_4_relu.txt  config.json  crypto_config.json  weights_0_relu.txt  weights_1_relu.txt  weights_2_relu.txt  weights_3_relu.txt  weights_4_relu.txt
fhe/assets/scripts/: create_blob.py  estimate_bounds.py  get_random_sample.py  quick_eval_net.py
fhe/lib/include/: neural_net.h  neural_net_evaluator.h  typedefs.h  utils.h
fhe/lib/src/: neural_net_evaluator.cpp  neural_net_evalulator.cpp  neural_net_func.cpp  neural_net_io.cpp  utils.cpp
fhe/src/: ciphertext_combine.cpp  ciphertext_split.cpp  iot_protect.cpp  main.cpp  run_network_server.cpp  setup_client.cpp  test_deserial.cpp
iot/: Cargo.toml  README.md
iot/src/: lib.rs
mpc/: .gitignore  README.md  analysis_app.py  config.py  data formats.md  database.py  ecg_inference_database.db  encode_sample.py  integration.py  key_share.py  main.py  mozaik_obelisk.py  rep3aes.py  requirements.txt  run_server.sh  run_tests.sh  sample.txt  sample1  server.py  server0.toml  server1.toml  server2.toml  server_test.py  setup_config.sh  task_manager.py  test.py  test_analysis_app.py  test_database.py  test_mozaik_obelisk.py  test_mpc_deployment.py  test_task_manager.py  timing.py
mpc/MP-SPDZ/: .gitignore
mpc/MP-SPDZ/Persistence/: Transactions-P0.data  Transactions-P1.data  Transactions-P2.data
mpc/MP-SPDZ/Programs/Source/: MITBIH_inference.mpc  heartbeat_inference_demo.mpc  heartbeat_inference_demo_batched_1.mpc  heartbeat_inference_demo_batched_1024.mpc  heartbeat_inference_demo_batched_112.mpc  heartbeat_inference_demo_batched_128.mpc  heartbeat_inference_demo_batched_144.mpc  heartbeat_inference_demo_batched_16.mpc  heartbeat_inference_demo_batched_160.mpc  heartbeat_inference_demo_batched_176.mpc  heartbeat_inference_demo_batched_192.mpc  heartbeat_inference_demo_batched_2.mpc  heartbeat_inference_demo_batched_208.mpc  heartbeat_inference_demo_batched_224.mpc  heartbeat_inference_demo_batched_240.mpc  heartbeat_inference_demo_batched_256.mpc  heartbeat_inference_demo_batched_32.mpc  heartbeat_inference_demo_batched_4.mpc  heartbeat_inference_demo_batched_48.mpc  heartbeat_inference_demo_batched_512.mpc  heartbeat_inference_demo_batched_64.mpc  heartbeat_inference_demo_batched_8.mpc  heartbeat_inference_demo_batched_80.mpc  heartbeat_inference_demo_batched_96.mpc  heartbeat_inference_demo_test.mpc  heartbeat_model_test.mpc  input_test.mpc  keras_mnist_dense_predict.mpc  ml_test.mpc  my_network.mpc
mpc/assets/integration_keys/: pub1.pem  pub2.pem  pub3.pem
mpc/assets/integration_test_glue/: integration_glue.html  integration_glue.js
mpc/assets/integration_test_keys/: party_key_1.pem  party_key_2.pem  party_key_3.pem  party_key_pub_1.pem  party_key_pub_2.pem  party_key_pub_3.pem
mpc/heartbeat-inference-model/: biases_shares1.txt  biases_shares2.txt  biases_shares3.txt  model_shares1.txt  model_shares2.txt  model_shares3.txt  set-weights.py
mpc/iot_integration/: Cargo.toml
mpc/iot_integration/src/: main.rs
mpc/rep3aes-deployment-keys/: generate-tls-certs.sh  openssl-config-p1.txt  openssl-config-p2.txt  openssl-config-p3.txt  p1.key  p1.pem  p2.key  p2.pem  p3.key  p3.pem
mpc/rep3aes/src/: rep3_aes_main.rs
mpc/templates/: index.html  results.html
mpc/tls_certs/: ca.crt  ca.key  client.crt  client.csr  client.key  client.pem  server1.crt  server1.csr  server1.key  server2.crt  server2.csr  server2.key  server3.crt  server3.csr  server3.key
mpc/tls_certs/mozaik_obelisk/: api.crt  api.csr  api.key  mozaik-ca.crt  mozaik-ca.key  mozaik-ca.srl
